# mergesafe

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml  experiment_matrix.yaml
results/matrix/: results.jsonl  summary.csv
scripts/: generate_figures.py  run_adaptive.py  run_all_experiments.sh  run_e2e.py  run_experiment.py  run_matrix.py
src/mergesafe/: __init__.py  cli.py  constants.py  utils.py
src/mergesafe/attacks/: __init__.py  adaptive.py  badnets.py  base.py  lobam.py  registry.py  sleeper.py  trainer.py  wanet.py
src/mergesafe/evaluation/: __init__.py  metrics.py
src/mergesafe/merging/: __init__.py  merger.py
src/mergesafe/scanner/: __init__.py  activation_scan.py  pipeline.py  sae_scan.py  spectral_scan.py  weight_scan.py
tests/: test_attacks.py  test_lobam.py  test_merging.py  test_utils.py
